// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFieldAdapter component should render a text field 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <label
      className="control-label"
      htmlFor="fullname"
    >
      Full name
    </label>
    <input
      className="form-control"
      id="fullname"
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Full name"
      type={undefined}
      value="Amber Zieme"
    />
  </div>
  <button
    disabled={true}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`TextFieldAdapter component should render a text field touched with error 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group has-error"
  >
    <label
      className="control-label"
      htmlFor="fullname"
    >
      Full name
    </label>
    <input
      className="form-control"
      id="fullname"
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Full name"
      type={undefined}
      value="Amber Zieme"
    />
  </div>
  <button
    disabled={true}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`TextFieldAdapter component should render a text field untouched with error 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <label
      className="control-label"
      htmlFor="fullname"
    >
      Full name
    </label>
    <input
      className="form-control"
      id="fullname"
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Full name"
      type={undefined}
      value="Amber Zieme"
    />
  </div>
  <button
    disabled={true}
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`TextFieldAdapter component should render a text field without value 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <input
      className="form-control"
      id="fullname"
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Full name"
      type={undefined}
      value=""
    />
  </div>
  <button
    disabled={true}
    type="submit"
  >
    Submit
  </button>
</form>
`;
